[gd_scene load_steps=4 format=3 uid="uid://by3yt58dbqjbc"]

[ext_resource type="Script" path="res://scenes/UI/ui.gd" id="1_3fc7f"]
[ext_resource type="PackedScene" uid="uid://bq0y5xkawdqdo" path="res://scenes/UI/main_menu.tscn" id="2_5vp2v"]
[ext_resource type="PackedScene" uid="uid://1ruf1hgc7hdk" path="res://scenes/UI/menu.tscn" id="2_74win"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_3fc7f")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GameMenu" parent="Control" instance=ExtResource("2_74win")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MainMenu" parent="Control" instance=ExtResource("2_5vp2v")]
unique_name_in_owner = true
layout_mode = 1
mouse_filter = 1

[connection signal="main_menu" from="Control/GameMenu" to="." method="_on_game_menu_main_menu"]
[connection signal="return_to_game" from="Control/GameMenu" to="." method="_on_game_menu_return_to_game"]
[connection signal="start_game" from="Control/MainMenu" to="." method="_on_main_menu_start_game"]
